[package]
name = "webapp-rs"
version = "0.1.0"
authors = ["Michal Hornický <mhornick@redhat.com>"]
edition = "2018"

[profile.dev]
opt-level = 1

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
log = "0.4.8"
env_logger = "0.6.2"
regex = "1.5.5"
serde =  { version = "=1.0.101", features = ["derive"] }
pickle = { package = "serde-pickle", version = "0.5.1" }
serde-aux = "0.6.1"
fnv = "1.0.3"
gnudbm = {version ="0.2.3", features = ["system-gdbm"] }

actix-web = "*"
#tower-web = { version = "0.3.7", default-features= false}